--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
     <div class="landing" id="home">
       <h1>Cornwall's</h1>
       <div class="landing-content main-section">
-        <p class="red-text">Hello Friends of Cornwalls,<br/>Our team has been working the last few days to shut down Cornwalls until further notice.  Being that we are a local family business, this unexpected situation has put us under tremendous financial stress.  We have a small but loyal team some of whom have been with us for more than fifteen years. In an effort to ensure we make it through this period of closure <a class="button" href="https://squareup.com/gift/ETZMPHXGXSJWZ/order" target="_blank">we're hoping our supporters will purchase a gift card</a> to make things easier. We look forward to serving you some day soon! Please be healthy and safe!<br/>Cheers,<br/>Cornwalls team</p>
+        <p class="red-text">Hello Friends of Cornwalls,<br/>Our Team has been working hard to reopen our space.  We are currently open for both indoor and outdoor dining as well as takeout.  We will be serving breakfast lunch and dinner so that our patrons have access to food and beverage for all meal periods.  We are going to be adjusting our hours as we feel necessary to continue to serve the community.  Thank you for your support and patience during this transition.<br/>Stay Healthy and Safe!<br/>Cheers!<br/>Cornwalls team</p>
         <a class="gift-card-btn" href="https://squareup.com/gift/ETZMPHXGXSJWZ/order" target="_blank">Buy Gift Card</a>
       </div>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
-          <h4>is <span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
-          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h4>
+          <h4 class="daily-time"></h4>
+          <!-- <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h4> -->
         </div>
       </div>
     </div>
@@ -90,6 +90,8 @@
       <div class="mission-section white-background main-section" id="mission">
         <div class="mission-statement">
           <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
+          <br/>
+          <p><a href="https://www.facebook.com/pages/category/Bar/Cornwalls-25408139253/" target="_blank">Like us on Facebook</a> and <a href="https://www.instagram.com/cornwallskenmore/" target="_blank">follow us on Instagram</a></p>
         </div>
       </div>
       <div class="menus-section white-background main-section" id="menus">
@@ -150,22 +152,22 @@
       </div>
       <div class="hours-section white-background main-section" id="hours">
         <h3>Hours</h3>
-        <div class="regular-hours-section">
+        <!-- <div class="regular-hours-section">
           <h4><span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
           <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h5>
-        </div>
+        </div> -->
         <div class="regular-hours-section">
-          <h3>Monday to Friday</h3>
-          <h4><span class="green-text">Open</span> from 12PM-2AM</h4>
-          <h5>Kitchen is <span class="green-text">open</span> from 12PM-3PM & 5PM-11PM</h5>
+          <h3>Tuesday to Saturday</h3>
+          <h4><span class="green-text">Open</span> from 8am-10pm</h4>
+          <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5>
         </div>
-        <div class="regular-hours-section">
+<!--         <div class="regular-hours-section">
           <h3>Saturday</h3>
           <h4><span class="green-text">Open</span> from 4PM-2AM</h4>
           <h5>Kitchen is <span class="green-text">open</span> from 4PM-11PM</h5>
-        </div>
+        </div> -->
         <div class="regular-hours-section">
-          <h3>Sunday</h3>
+          <h3>Sunday & Monday</h3>
           <h5>Only open during Red Sox home games and Fenway concerts.</h5>
         </div>
       </div>
@@ -208,7 +210,7 @@
         <h6>Cornwall’s is located at</h6>
         <div class="address">          
           <a href="https://goo.gl/maps/wUQ1Jaj9XE32" class="green-link" target="_blank">
-            <h6 class="green-text">654 Beacon Street</br>Boston, MA 02215</h6>
+            <h6 class="green-text">644 Beacon Street</br>Boston, MA 02215</h6>
           </a>
         </div>
         <div class="telephone-link">
