--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       <div class="menus-section white-background main-section" id="menus">
         <h3>Menus</h3>
         <div class="menu-links">
-          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch.pdf" target="_blank">Lunch</a>
+          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
           </br>
-          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/dinner.pdf" target="_blank">Dinner</a>
+          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">All Day</a>
           <!-- </br> -->
           <!-- <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a> -->
         </div>
