--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="menu-links">
           <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
           </br>
-          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">All Day</a>
+          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch-dinner.pdf" target="_blank">Lunch & Dinner</a>
           <!-- </br> -->
           <!-- <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a> -->
         </div>
