menu and order online updates

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       <h1>Cornwall's</h1>
       <div class="landing-content main-section">
         <p class="red-text">Hello Friends of Cornwalls,<br/>Our Team has been working hard to reopen our space.  We are currently open for both indoor and outdoor dining as well as takeout.  We will be serving breakfast lunch and dinner so that our patrons have access to food and beverage for all meal periods.  We are going to be adjusting our hours as we feel necessary to continue to serve the community.  Thank you for your support and patience during this transition.<br/>Stay Healthy and Safe!<br/>Cheers!<br/>Cornwalls team</p>
-        <a class="gift-card-btn" href="https://squareup.com/gift/ETZMPHXGXSJWZ/order" target="_blank">Buy Gift Card</a>
+        <a class="gift-card-btn" href="https://togoorder.com/web/3912#/o/2/f/1/menus" target="_blank">Order take out</a>
+        <p>or</p>
+        <a class="gift-card-btn" href="https://togoorder.com/web/3912#/o/1/f/2/table/" target="_blank">Order to your table</a>
       </div>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
@@ -100,6 +102,8 @@
           <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
           </br>
           <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch-dinner.pdf" target="_blank">Lunch & Dinner</a>
+          <a class="menu-link yellow-text" href="https://cornwalls.s3.amazonaws.com/menus/dine-in-beer.pdf" target="_blank">Dine in beer list</a>
+          <a class="menu-link green-text" href="https://cornwalls.s3.amazonaws.com/menus/togo-beer.pdf" target="_blank">Togo beer list</a>
           <!-- </br> -->
           <!-- <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a> -->
         </div>
