updates for new blog

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       <h1>Cornwall's</h1>
       <div class="landing-content main-section">
         <p class="red-text">Hello Friends of Cornwalls,<br/>Our Team has been working hard to reopen our space.  We are currently open for both indoor and outdoor dining as well as takeout.  We will be serving breakfast lunch and dinner so that our patrons have access to food and beverage for all meal periods.  We are going to be adjusting our hours as we feel necessary to continue to serve the community.  Thank you for your support and patience during this transition.<br/>Stay Healthy and Safe!<br/>Cheers!<br/>Cornwalls team</p>
-        <a class="gift-card-btn" href="https://togoorder.com/web/3912#/o/2/f/1/menus" target="_blank">Order take out</a>
+        <a class="takeout-btn" href="https://togoorder.com/web/3912#/o/2/f/1/menus" target="_blank">Order take out</a>
         <p>or</p>
-        <a class="gift-card-btn" href="https://togoorder.com/web/3912#/o/1/f/2/table/" target="_blank">Order to your table</a>
+        <a class="table-order-btn" href="https://togoorder.com/web/3912#/o/1/f/2/table/" target="_blank">Order to your table</a>
       </div>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
