--- a/index.html
+++ b/index.html
@@ -74,10 +74,23 @@
     </div>
     <div class="landing" id="home">
       <h1>Cornwall's</h1>
+      <div class="menus-section">
+        <h3>Menus</h3>
+        <div class="menu-links">
+          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
+          </br>
+          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch-dinner.pdf" target="_blank">Lunch & Dinner</a>
+          </br>
+          <a class="menu-link yellow-text" href="https://cornwalls.s3.amazonaws.com/menus/dine-in-beer.pdf" target="_blank">Beers for Here</a>
+          </br>
+          <a class="menu-link green-text" href="https://cornwalls.s3.amazonaws.com/menus/togo-beer.pdf" target="_blank">To Go Beers</a>
+          </br>
+          <a class="menu-link red-text" href="https://cornwalls.s3.amazonaws.com/menus/cocktails.pdf" target="_blank">Cocktails</a>
+      </div>
       <div class="landing-content main-section">
-        <a class="takeout-btn" href="https://togoorder.com/web/3912#/o/2/f/1/menus" target="_blank">Order take out</a>
+        <a class="takeout-btn" href="https://togoorder.com/web/3912#/o/2/f/1/menus" target="_blank">Order pick up</a>
         <p>or</p>
-        <a class="table-order-btn" href="https://togoorder.com/web/3912#/o/1/f/2/table/" target="_blank">Order to your table</a>
+        <a class="table-order-btn" href="https://grubhub.com/restaurant/cornwalls-644-beacon-st-boston/2304071?classicAffiliateId=%2Fr%2Fw%2F2304071%2F&utm_source=restaurant.grubhub.com&utm_medium=OOL&utm_campaign=order%20online&utm_content=2304071" target="_blank">Order delivery</a>
         <p class="red-text">Hello Friends of Cornwalls,<br/>Our Team has been working hard to reopen our space.  We are currently open for both indoor and outdoor dining as well as takeout.  We will be serving breakfast lunch and dinner so that our patrons have access to food and beverage for all meal periods.  We are going to be adjusting our hours as we feel necessary to continue to serve the community.  Thank you for your support and patience during this transition.<br/>Stay Healthy and Safe!<br/>Cheers!<br/>Cornwalls team</p>
       </div>
       <div class="landing-content">
@@ -178,7 +191,7 @@
         </div>
       </div>
       <div class="events-section white-background main-section" id="events">
-        <h4>Cornwall’s has three pool tables, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
+        <h4>Cornwall’s has one pool table, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
 
         <div class="cornwalls-image-slider">
           <div>
@@ -213,6 +226,11 @@
     
       <div class="contact-section white-background main-section" id="contact">
         <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button green-link">click here</span></h5>
+        <h6>Cornwall's wifi</h6>
+        <div class="address margin-bottom-20">          
+          <h6>Wifi Network: <span class="green-text">Cornwalls Public</span></h6></br>
+          <h6>Wifi Password: <span class="green-text">Braemore644!</span></h6>
+        </div>
         <h6>Cornwall’s is located at</h6>
         <div class="address">          
           <a href="https://goo.gl/maps/wUQ1Jaj9XE32" class="green-link" target="_blank">
