--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
           <a class="menu-link yellow-text" href="https://cornwalls.s3.amazonaws.com/menus/dine-in-beer.pdf" target="_blank">Dine in beer list</a>
           </br>
           <a class="menu-link green-text" href="https://cornwalls.s3.amazonaws.com/menus/togo-beer.pdf" target="_blank">Togo beer list</a>
-          <!-- </br> -->
-          <!-- <a class="menu-link red-text" href="#" target="_blank">Beer, Wine, Spirits</a> -->
+          </br>
+          <a class="menu-link red-text" href="https://cornwalls.s3.amazonaws.com/menus/cocktails.pdf" target="_blank">Cocktails</a>
         </div>
         <div class="cornwalls-image-slider">
           <div>
