--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
           <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h5>
         </div> -->
         <div class="regular-hours-section">
-          <h3>Tuesday to Saturday</h3>
-          <h4><span class="green-text">Open</span> from 8am-10pm</h4>
+          <h3>Monday to Wednesday</h3>
+          <h4 class="margin-bottom-20 green-text">Open from 8am-10pm</h4>
+          <h3>Thursday to Saturday</h3>
+          <h4 class="margin-bottom-20 green-text">Open from 8am-11pm</h4>
           <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5>
         </div>
 <!--         <div class="regular-hours-section">
@@ -186,7 +188,7 @@
           <h5>Kitchen is <span class="green-text">open</span> from 4PM-11PM</h5>
         </div> -->
         <div class="regular-hours-section">
-          <h3>Sunday & Monday</h3>
+          <h3>Sunday</h3>
           <h5>Only open during Red Sox home games and Fenway concerts.</h5>
         </div>
       </div>
