--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="landing" id="home">
       <h1>Cornwall's</h1>
-      <div class="menus-section">
+      <div class="menus-section" id="menus">
         <h2>Menus</h2>
         <div class="menu-links">
           <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
@@ -109,19 +109,7 @@
           <p><a href="https://www.facebook.com/pages/category/Bar/Cornwalls-25408139253/" target="_blank">Like us on Facebook</a> and <a href="https://www.instagram.com/cornwallskenmore/" target="_blank">follow us on Instagram</a></p>
         </div>
       </div>
-      <div class="menus-section white-background main-section" id="menus">
-        <h3>Menus</h3>
-        <div class="menu-links">
-          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
-          </br>
-          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch-dinner.pdf" target="_blank">Lunch & Dinner</a>
-          </br>
-          <a class="menu-link yellow-text" href="https://cornwalls.s3.amazonaws.com/menus/dine-in-beer.pdf" target="_blank">Dine in beer list</a>
-          </br>
-          <a class="menu-link green-text" href="https://cornwalls.s3.amazonaws.com/menus/togo-beer.pdf" target="_blank">Togo beer list</a>
-          </br>
-          <a class="menu-link red-text" href="https://cornwalls.s3.amazonaws.com/menus/cocktails.pdf" target="_blank">Cocktails</a>
-        </div>
+      <div class="menus-section white-background main-section">
         <div class="cornwalls-image-slider">
           <div>
             <img src="https://s3.amazonaws.com/cornwalls/menu-photos/menu_1.jpg" alt="picture of food"/>
