--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       </div>
     
       <div class="contact-section white-background main-section" id="contact">
-        <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button green-link">click here</span></h5>
+        <!-- <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button green-link">click here</span></h5> -->
         <h6>Cornwall's wifi</h6>
         <div class="address margin-bottom-20">          
           <h6>Wifi Network: <span class="green-text">Cornwalls Public</span></h6></br>
@@ -234,7 +234,7 @@
           <div id="goog-map"></div>
         </div>
       </div>
-      <div class="contact-form main-section white-background" id="event-contact-form">
+      <!-- <div class="contact-form main-section white-background" id="event-contact-form">
         <div class="form-header">
           <h3>Event Request Form</h3>
         </div>
@@ -301,7 +301,7 @@
             Thank you! Someone will be in touch within the next 2-3 business days.
           </p>
         </form>
-      </div>
+      </div> -->
     </div>
     <div class="footer">
       <p>&#169 Cornwall's</p>
