--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
       </div>
       <div class="events-section white-background main-section" id="events">
-        <h4>Cornwall’s has one pool table, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4>
+        <h4>Cornwall’s has one pool table, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. <!-- To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4> -->
 
         <div class="cornwalls-image-slider">
           <div>
