--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       </div>
     
       <div class="contact-section white-background main-section" id="contact">
-        <!-- <h5 class="green-text">To host an event at Cornwall's <span class="event-form-button green-link">click here</span></h5> -->
+        <h5 class="green-text">To host an event at Cornwall's, or if you have any other questions, please email <a class="event-form-button green-link" href="mailto:manager@cornwalls.com">manager@cornwalls.com</a></h5>
         <h6>Cornwall's wifi</h6>
         <div class="address margin-bottom-20">          
           <h6>Wifi Network: <span class="green-text">Cornwalls Public</span></h6></br>
