--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <div class="menus-section" id="menus">
         <h2>Menus</h2>
         <div class="menu-links">
-          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
-          </br>
+          <!-- <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
+          </br> -->
           <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch-dinner.pdf" target="_blank">Lunch & Dinner</a>
           </br>
           <a class="menu-link yellow-text" href="https://cornwalls.s3.amazonaws.com/menus/dine-in-beer.pdf" target="_blank">Beers for Here</a>
@@ -165,10 +165,12 @@
         </div> -->
         <div class="regular-hours-section">
           <h3>Monday to Wednesday</h3>
-          <h4 class="margin-bottom-20 green-text">Open from 8am-10pm</h4>
+          <h4 class="margin-bottom-20 green-text">Open from 11am-10pm</h4>
           <h3>Thursday to Saturday</h3>
-          <h4 class="margin-bottom-20 green-text">Open from 8am-11pm</h4>
-          <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5>
+          <h4 class="margin-bottom-20 green-text">Open from 11am-12am</h4>
+          <h3>Sunday</h3>
+          <h4 class="margin-bottom-20 red-text">Closed</h4>
+          <!-- <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5> -->
         </div>
 <!--         <div class="regular-hours-section">
           <h3>Saturday</h3>
