--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <div class="landing-hours">
-          <h4 class="daily-time"></h4>
+          <!-- <h4 class="daily-time"></h4> -->
           <!-- <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h4> -->
         </div>
       </div>
