--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
       </div>
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
-        <div class="landing-hours">
-          <!-- <h4 class="daily-time"></h4> -->
-          <!-- <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h4> -->
-        </div>
+        <!-- <div class="landing-hours">
+          <h4 class="daily-time"></h4>
+          <h4>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h4>
+        </div> -->
       </div>
     </div>
     <div class="yellow-border-section">
