--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
     </div>
     <div class="landing" id="home">
       <h1>Cornwall's</h1>
-      <p>To our loyal patrons,<br>It is with mixed emotions that we have TEMPORARILY closed.  As the building and community undergo a phase of redevelopment, we are doing what we see necessary to ensure the future success of Kenmore Square. We are hopeful that this sacrifice will allow us to serve our community of staples such as BU and the Red Sox as well as our new neighbors.  We feel so lucky to have some amazing regulars who have gotten us this far; we’re nothing without you.  We will be closed end of night on 11/19 and reopening at the end of March in time for Red Sox opening day and graduation season.  We will be posting any updates to the timeline on this page.<br>Thank you,<br>Cornwalls crew</p>
+      <div class="yellow-border-section">
+      <div class="mission-section white-background main-section" id="mission">
+        <div class="mission-statement">
+          <p>To our loyal patrons,<br>It is with mixed emotions that we have TEMPORARILY closed.  As the building and community undergo a phase of redevelopment, we are doing what we see necessary to ensure the future success of Kenmore Square. We are hopeful that this sacrifice will allow us to serve our community of staples such as BU and the Red Sox as well as our new neighbors.  We feel so lucky to have some amazing regulars who have gotten us this far; we’re nothing without you.  We will be closed end of night on 11/19 and reopening at the end of March in time for Red Sox opening day and graduation season.  We will be posting any updates to the timeline on this page.<br>Thank you,<br>Cornwalls crew</p>
+        </div>
+      </div>
 
       <!-- <div class="menus-section" id="menus">
         <h2>Menus</h2>
@@ -161,6 +166,7 @@
       </div>
       <div class="hours-section white-background main-section" id="hours">
         <h3>Hours</h3>
+        <h3>We are TEMPORARILY closed</h3>
         <!-- <div class="regular-hours-section">
           <h4><span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
           <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h5>
