--- a/index.html
+++ b/index.html
@@ -171,24 +171,24 @@
           <h4><span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
           <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h5>
         </div> -->
-        <div class="regular-hours-section">
+        <!-- <div class="regular-hours-section">
           <h3>Monday to Wednesday</h3>
           <h4 class="margin-bottom-20 green-text">Open from 11am-10pm</h4>
           <h3>Thursday to Saturday</h3>
           <h4 class="margin-bottom-20 green-text">Open from 11am-12am</h4>
           <h3>Sunday</h3>
           <h4 class="margin-bottom-20 red-text">Closed</h4>
-          <!-- <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5> -->
-        </div>
+          <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5>
+        </div> -->
 <!--         <div class="regular-hours-section">
           <h3>Saturday</h3>
           <h4><span class="green-text">Open</span> from 4PM-2AM</h4>
           <h5>Kitchen is <span class="green-text">open</span> from 4PM-11PM</h5>
         </div> -->
-        <div class="regular-hours-section">
+        <!-- <div class="regular-hours-section">
           <h3>Sunday</h3>
           <h5>Only open during Red Sox home games and Fenway concerts.</h5>
-        </div>
+        </div> -->
       </div>
       <div class="events-section white-background main-section" id="events">
         <h4>Cornwall’s has one pool table, darts, two rooms, an outdoor seating area, and space to accomadate 160 people. <!-- To host your next event at Cornwall’s, <span class="event-form-button green-link">please fill out this form</span></h4> -->
