udpates for the website

--- a/index.html
+++ b/index.html
@@ -77,29 +77,16 @@
       <div class="yellow-border-section">
       <div class="mission-section white-background main-section" id="mission">
         <div class="mission-statement">
-          <p>To our loyal patrons,<br>It is with mixed emotions that we have TEMPORARILY closed.  As the building and community undergo a phase of redevelopment, we are doing what we see necessary to ensure the future success of Kenmore Square. We are hopeful that this sacrifice will allow us to serve our community of staples such as BU and the Red Sox as well as our new neighbors.  We feel so lucky to have some amazing regulars who have gotten us this far; we’re nothing without you.  We will be closed end of night on 11/19 and reopening at the end of March in time for Red Sox opening day and graduation season.  We will be posting any updates to the timeline on this page.<br>Thank you,<br>Cornwalls crew</p>
+          <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
         </div>
       </div>
 
-      <!-- <div class="menus-section" id="menus">
+      <div class="menus-section" id="menus">
         <h2>Menus</h2>
         <div class="menu-links">
-          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/breakfast.pdf" target="_blank">Breakfast</a>
-          </br>
-          <a class="menu-link green-text" href="https://s3.amazonaws.com/cornwalls/menus/lunch-dinner.pdf" target="_blank">Lunch & Dinner</a>
-          </br>
-          <a class="menu-link yellow-text" href="https://cornwalls.s3.amazonaws.com/menus/dine-in-beer.pdf" target="_blank">Beers for Here</a>
-          </br>
-          <a class="menu-link green-text" href="https://cornwalls.s3.amazonaws.com/menus/togo-beer.pdf" target="_blank">To Go Beers</a>
-          </br>
-          <a class="menu-link red-text" href="https://cornwalls.s3.amazonaws.com/menus/cocktails.pdf" target="_blank">Cocktails</a>
+          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">All day menu</a>
+        </div>
       </div>
-      <div class="landing-content main-section">
-        <a class="takeout-btn" href="https://togoorder.com/web/3912#/o/2/f/1/menus" target="_blank">Order pick up</a>
-        <p>or</p>
-        <a class="table-order-btn" href="https://grubhub.com/restaurant/cornwalls-644-beacon-st-boston/2304071?classicAffiliateId=%2Fr%2Fw%2F2304071%2F&utm_source=restaurant.grubhub.com&utm_medium=OOL&utm_campaign=order%20online&utm_content=2304071" target="_blank">Order delivery</a>
-        <p class="red-text">Hello Friends of Cornwalls,<br/>Our Team has been working hard to reopen our space.  We are currently open for both indoor and outdoor dining as well as takeout.  We will be serving breakfast lunch and dinner so that our patrons have access to food and beverage for all meal periods.  We are going to be adjusting our hours as we feel necessary to continue to serve the community.  Thank you for your support and patience during this transition.<br/>Stay Healthy and Safe!<br/>Cheers!<br/>Cornwalls team</p>
-      </div> -->
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <!-- <div class="landing-hours">
@@ -111,8 +98,6 @@
     <div class="yellow-border-section">
       <div class="mission-section white-background main-section" id="mission">
         <div class="mission-statement">
-          <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
-          <br/>
           <p><a href="https://www.facebook.com/pages/category/Bar/Cornwalls-25408139253/" target="_blank">Like us on Facebook</a> and <a href="https://www.instagram.com/cornwallskenmore/" target="_blank">follow us on Instagram</a></p>
         </div>
       </div>
