--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
           <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
         </div>
       </div>
-
-      <div class="menus-section" id="menus">
+     <!--  <div class="menus-section" id="menus">
         <h2>Menus</h2>
         <div class="menu-links">
-          <a class="menu-link yellow-text" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">All day menu</a>
+          <a class="menu-link" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">All day menu</a>
         </div>
-      </div>
+      </div> -->
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <!-- <div class="landing-hours">
