udpates for the website

--- a/index.html
+++ b/index.html
@@ -78,14 +78,12 @@
       <div class="mission-section white-background main-section" id="mission">
         <div class="mission-statement">
           <p>Cornwall's is a drinking and dining establishment that is, first and foremost, a British-style pub, where people congregate to drink their pints of beer and ale, talk, play games and eat. Cornwall's caters to those who want a good meal and a good drink at regular prices. The food and drink are traditional in a good, solid way. Cornwall's was started on the premise that drinking makes you hungry and eating makes you thirsty, and both sets of circumstances, while accompanied by good conversation and a relaxed atmosphere, combine to create a resilient institution - which contributes to community life.</p>
+          <br>
+          <div class="menus-section" id="menus">
+            <a class="menu-link" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">Check out our new all day menu!</a>
+          </div>
         </div>
       </div>
-     <!--  <div class="menus-section" id="menus">
-        <h2>Menus</h2>
-        <div class="menu-links">
-          <a class="menu-link" href="https://s3.amazonaws.com/cornwalls/menus/all-day.pdf" target="_blank">All day menu</a>
-        </div>
-      </div> -->
       <div class="landing-content">
         <img class="landing-image" src="./img/landing/landing.jpg" alt="Landing Image of Team"/>
         <!-- <div class="landing-hours">
@@ -150,20 +148,19 @@
       </div>
       <div class="hours-section white-background main-section" id="hours">
         <h3>Hours</h3>
-        <h3>We are TEMPORARILY closed</h3>
         <!-- <div class="regular-hours-section">
           <h4><span class="green-text">OPEN</span> today <span class="daily-time"></span></h4>
           <h5>Kitchen <span class="red-text">closes</span> at <span class="kitchen-daily-time"></span></h5>
         </div> -->
-        <!-- <div class="regular-hours-section">
-          <h3>Monday to Wednesday</h3>
-          <h4 class="margin-bottom-20 green-text">Open from 11am-10pm</h4>
-          <h3>Thursday to Saturday</h3>
-          <h4 class="margin-bottom-20 green-text">Open from 11am-12am</h4>
+        <div class="regular-hours-section">
+          <h3>Monday to Saturday</h3>
+          <h4 class="margin-bottom-20 green-text">Open from 1130am-2am</h4>
+          <!-- <h3>Thursday to Saturday</h3>
+          <h4 class="margin-bottom-20 green-text">Open from 11am-12am</h4> -->
           <h3>Sunday</h3>
-          <h4 class="margin-bottom-20 red-text">Closed</h4>
-          <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5>
-        </div> -->
+          <h4 class="margin-bottom-20 red-text">Open select Sundays</h4>
+          <!-- <h5>Breakfast is from 8am-12pm All day menu 12pm-10pm</h5> -->
+        </div>
 <!--         <div class="regular-hours-section">
           <h3>Saturday</h3>
           <h4><span class="green-text">Open</span> from 4PM-2AM</h4>
